# sub-recorder

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  render.yaml  start.sh
.github/: release-drafter.yml
.github/workflows/: ci.yml  docker-build.yml
backend/: Cargo.toml  README.md  static  sub_recorder.db  sub_recorder.db-shm  sub_recorder.db-wal
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  sub_recorder.db
docker/: Dockerfile.ci  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/public/: icon-preview.html
frontend/scripts/: generate-fa-icons.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/components/: animated-logo.tsx  category-filter.tsx  category-panel.tsx  fa-icon-picker.tsx  icon-upload.tsx  login-page.tsx  nav-sidebar.tsx  notifications-page.tsx  scene-card.tsx  scene-detail-sheet.tsx  scene-page.tsx  settings-page.tsx  sort-options.tsx  subscription-calendar.tsx  subscription-card.tsx  subscription-detail-sheet.tsx  subscription-dialog.tsx
frontend/src/components/ui/: password-input.tsx
frontend/src/lib/: api.ts  color.ts  currency.ts  fa-icons-data.json  fa-icons.ts  types.ts
